deploy/api/spring-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: spring-api
  name: spring-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spring-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: 976034468541.dkr.ecr.us-east-2.amazonaws.com/vergeman/nuisancemaps:0.0.1-SNAPSHOT
          name: spring-api
